troubleshooting heroku/bootstrap bug regarding navbar links on mobile devices

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,3 +30,7 @@
 .story_caption {
 	vertical-align: top
 }
+
+.dropdown-backdrop{
+    position: static;
+}
